_includes/manuals/1.8/3.2.3_installation_scenarios.md

The Foreman installer can accommodate more complex, multi-host setups when supplied with appropriate parameters.

#### Setting up Foreman with external Puppet masters

Using the scenarios outlined below, a simple scale-out setup can be created as follows:

1. On the Foreman host, run a complete foreman-installer all-in-one installation to provide Foreman, a Puppet master and smart proxy.  This will be the Puppet CA.

For each Puppet master:

1. Generate a new certificate following the steps in the SSL CA section and transfer it to the new Puppet master host
1. Run the standalone Puppet master installation as detailed below

Each Puppet master will register with Foreman as a smart proxy, while the instance running on the Foreman host itself will act as a central Puppet CA.  These can be selected while adding new hosts or host groups.

#### SSL certificate authority setup

The scenarios below assume a single Puppet CA (certificate authority) for all hosts, which is also used for Foreman and smart proxy communications, though more complex deployments are possible.  This might be the central Foreman host, or a particular Puppet master.

Other systems require certificates to be generated on the central Puppet CA host, then distributed to them before running foreman-installer (else it may generate a second CA).  To prepare these, on the host acting as Puppet CA, run:

    # puppet cert generate new-puppetmaster.example.com
    Notice: new-puppetmaster.example.com has a waiting certificate request
    Notice: Signed certificate request for new-puppetmaster.example.com
    Notice: Removing file Puppet::SSL::CertificateRequest new-puppetmaster.example.com at '/var/lib/puppet/ssl/ca/requests/new-puppetmaster.example.com.pem'
    Notice: Removing file Puppet::SSL::CertificateRequest new-puppetmaster.example.com at '/var/lib/puppet/ssl/certificate_requests/new-puppetmaster.example.com.pem'
    
    # ls /var/lib/puppet/ssl/*/new-puppetmaster.example.com.pem
    /var/lib/puppet/ssl/certs/new-puppetmaster.example.com.pem
    /var/lib/puppet/ssl/private_keys/new-puppetmaster.example.com.pem
    /var/lib/puppet/ssl/public_keys/new-puppetmaster.example.com.pem

Transfer the following files to the same paths on the new host:

* /var/lib/puppet/ssl/certs/ca.pem
* /var/lib/puppet/ssl/certs/new-puppetmaster.example.com.pem
* /var/lib/puppet/ssl/private_keys/new-puppetmaster.example.com.pem

This provides the new host a certificate in the same authority, but doesn't make it a CA itself.  Certificates will continue to be generated on the central Puppet CA host.

#### Standalone Puppet master

A standalone Puppet master can be configured along with a smart proxy installation, enabling the Puppet infrastructure to be scaled out.  A certificate should be generated and copied to the host first to make it part of the same CA, else a new Puppet CA will be generated.

Command line arguments:

{% highlight bash %}
foreman-installer \
  --no-enable-foreman \
  --no-enable-foreman-cli \
  --no-enable-foreman-plugin-bootdisk \
  --no-enable-foreman-plugin-setup \
  --enable-puppet \
  --puppet-server-ca=false \
  --puppet-server-foreman-url=https://foreman.example.com \
  --enable-foreman-proxy \
  --foreman-proxy-puppetca=false \
  --foreman-proxy-tftp=false \
  --foreman-proxy-foreman-base-url=https://foreman.example.com \
  --foreman-proxy-trusted-hosts=foreman.example.com \
  --foreman-proxy-oauth-consumer-key=<key here> \
  --foreman-proxy-oauth-consumer-secret=<secret here>
{% endhighlight %}

Fill in the OAuth consumer key and secret values from your Foreman instance, retrieve them from *Administer > Settings > Auth*, and set the Foreman URLs appropriately.  These allow the smart proxy to register automatically with the Foreman instance, or disable with `--foreman-proxy-register-in-foreman=false`.

#### PuppetDB integration

An existing PuppetDB server can be integrated into a Puppet master by adding:

{% highlight bash %}
foreman-installer \
  [...]
  --puppet-server-puppetdb-host=puppetdb.example.com \
  --puppet-server-reports=foreman,puppetdb \
  --puppet-server-storeconfigs-backend=puppetdb
{% endhighlight %}

Be aware that foreman-installer does not setup the PuppetDB server itself.

#### Foreman server without the Puppet master

The default "all-in-one" Foreman installation includes a Puppet master, but this can be disabled.  Foreman by default uses Puppet's SSL certificates however, so a certificate must be generated and copied to the host first, or all SSL communications need to be disabled.

Command line arguments:

{% highlight bash %}
foreman-installer \
  --puppet-server=false \
  --foreman-proxy-puppetrun=false \
  --foreman-proxy-puppetca=false
{% endhighlight %}

This will still configure the Puppet agent, but this too can be disabled with `--no-enable-puppet` to disable the whole Puppet module.

#### Smart proxy for DNS, DHCP etc.

The smart proxy allows management of various network services, such as DNS, DHCP and TFTP.  The installer can set up a basic smart proxy service ready to be configured, or it can install and configure BIND or ISC DHCP ready to go.   A certificate should be generated and copied to the host first so Foreman can contact the proxy server.

Command line arguments for a basic smart proxy installation:

{% highlight bash %}
foreman-installer \
  --no-enable-foreman \
  --no-enable-foreman-cli \
  --no-enable-foreman-plugin-bootdisk \
  --no-enable-foreman-plugin-setup \
  --no-enable-puppet \
  --enable-foreman-proxy \
  --foreman-proxy-tftp=false \
  --foreman-proxy-foreman-base-url=https://foreman.example.com \
  --foreman-proxy-trusted-hosts=foreman.example.com \
  --foreman-proxy-oauth-consumer-key=<key here> \
  --foreman-proxy-oauth-consumer-secret=<secret here>
{% endhighlight %}

Fill in the OAuth consumer key and secret values from your Foreman instance, retrieve them from *Administer > Settings > Auth*, and set the Foreman URL appropriately.  These allow the smart proxy to register automatically with the Foreman instance, or disable with `--foreman-proxy-register-in-foreman=false`.

Command line arguments for a smart proxy configured with just BIND, setting DNS forwarders and overriding the default forward and reverse DNS zones:

{% highlight bash %}
foreman-installer \
  --no-enable-foreman \
  --no-enable-foreman-cli \
  --no-enable-foreman-plugin-bootdisk \
  --no-enable-foreman-plugin-setup \
  --no-enable-puppet \
  --enable-foreman-proxy \
  --foreman-proxy-tftp=false \
  --foreman-proxy-puppetca=false \
  --foreman-proxy-puppetrun=false \
  --foreman-proxy-dns=true \
  --foreman-proxy-dns-interface=eth0 \
  --foreman-proxy-dns-zone=example.com \
  --foreman-proxy-dns-reverse=0.0.10.in-addr.arpa \
  --foreman-proxy-dns-forwarders=8.8.8.8 \
  --foreman-proxy-dns-forwarders=8.8.4.4 \
  --foreman-proxy-foreman-base-url=https://foreman.example.com \
  --foreman-proxy-trusted-hosts=foreman.example.com \
  --foreman-proxy-oauth-consumer-key=<key here> \
  --foreman-proxy-oauth-consumer-secret=<secret here>
{% endhighlight %}

Ensure the dns-interface argument is updated with the correct network interface name for the DNS server to listen on.

Command line arguments for a smart proxy configured with just ISC DHCP and a single DHCP subnet:

{% highlight bash %}
foreman-installer \
  --no-enable-foreman \
  --no-enable-foreman-cli \
  --no-enable-foreman-plugin-bootdisk \
  --no-enable-foreman-plugin-setup \
  --no-enable-puppet \
  --enable-foreman-proxy \
  --foreman-proxy-puppetca=false \
  --foreman-proxy-puppetrun=false \
  --foreman-proxy-tftp=false \
  --foreman-proxy-dhcp=true \
  --foreman-proxy-dhcp-interface=eth0 \
  --foreman-proxy-dhcp-gateway=10.0.0.1 \
  --foreman-proxy-dhcp-range="10.0.0.50 10.0.0.200" \
  --foreman-proxy-dhcp-nameservers="10.0.1.2,10.0.1.3" \
  --foreman-proxy-foreman-base-url=https://foreman.example.com \
  --foreman-proxy-trusted-hosts=foreman.example.com \
  --foreman-proxy-oauth-consumer-key=<key here> \
  --foreman-proxy-oauth-consumer-secret=<secret here>
{% endhighlight %}

Also ensure here that the dhcp-interface argument is updated for the interface to run DHCP on.
